<resources>
    <string name="app_name">Uber Clone</string>
    <string name="uber">Uber</string>
    <string name="move_with_safety">Move with safety</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get started</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="verification">By clicking on a social option you may receive an SMS for verification. Message and data rates may apply.</string>
    <string name="next">Next</string>
    <string name="default_web_client_id">${GOOGLE_WEB_CLIENT_ID}</string>
    
    <!-- Facebook Configuration -->
    <string name="facebook_app_id">${FACEBOOK_APP_ID}</string>
    <string name="facebook_client_token">${FACEBOOK_CLIENT_TOKEN}</string>
    <string name="fb_login_protocol_scheme">fb${FACEBOOK_APP_ID}</string>
</resources>