<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartedActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/StartedUberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70sp"
        android:text="@string/uber"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/StartedUberImageView"
        android:layout_width="281dp"
        android:layout_height="212dp"
        android:layout_below="@+id/StartedUberTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/uber_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StartedUberImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60sp"
        android:text="@string/move_with_safety"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/StartedUberButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="16sp" />


</RelativeLayout>